# DeepResearch

./: .dockerignore  .env.development  .env.production  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Podmanfile  README.md  healthcheck.sh  podman-compose.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  code-quality.yml  nuitka-build.yml  validate-config.yml
.qoder/repowiki/zh/content/: LLM接口设计.md  工具与实用程序.md  快速开始.md  数据模型与状态管理.md  贡献与开发指南.md  部署与运维.md  错误处理与异常管理.md  项目概述.md
.qoder/repowiki/zh/content/API参考文档/: API参考文档.md  CLI命令API.md  LLM接口API.md  扩展点API.md  核心API接口.md  配置管理API.md
.qoder/repowiki/zh/content/命令行界面/: 主命令入口.md  历史记录管理.md  命令行界面.md  工具函数.md  用户界面组件.md  配置管理.md
.qoder/repowiki/zh/content/提示词模板系统/: 提示词模板系统.md  模板加载机制.md  模板定制指南.md  模板应用系统.md
.qoder/repowiki/zh/content/搜索工具集成/: Jina搜索引擎集成.md  MCP客户端集成.md  Tavily搜索引擎集成.md  搜索客户端工厂.md  搜索工具集成.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.trae/specs/analyze_doc_content/: checklist.md  spec.md  tasks.md
.trae/specs/deepresearch_optimization/: checklist.md  spec.md  tasks.md
.trae/specs/merge_docs_folders/: checklist.md  spec.md  tasks.md
.trae/specs/migrate_test_files/: checklist.md  spec.md  tasks.md
.trae/specs/optimize_doc_content/: checklist.md  spec.md  tasks.md
.trae/specs/sphinx_documentation/: checklist.md  spec.md  tasks.md
.trae/specs/update-intro-quickstart/: checklist.md  spec.md  tasks.md
.trae/specs/update_agents_claude_docs/: checklist.md  spec.md  tasks.md
config/: mcp.toml
doc/: CONTENT_ANALYSIS_REPORT.md  README_SPHINX.md  README_Zh.md  REFACTORING_COMPARISON.md  _config.toml  assessment_report.md  conf.py  config_optimization.md  deepresearch_technical_analysis_report.md  index.rst  intro.md  postmortem-config-directory-migration-20260411.md
doc/api/: api.md  auto_api.md
doc/architecture/: architecture.md
doc/contributing/: documentation_guidelines.md
doc/deployment/: deployment.md
doc/releases/: v1.1.1.md
doc/user_guide/: user_guide.md
docs/: PERFORMANCE_ANALYSIS.md  assessment_report.md
docs/contributing/: documentation_guidelines.md
docs/releases/: v1.1.1.md
src/: run.py
src/agent/: deepsearch.py  generate.py  learning.py  message.py  outline.py  prep.py  test_agent.py
src/deepresearch/: __init__.py  errors.py  logging_config.py  run.py
src/deepresearch/agent/: agent.py  deepsearch.py  generate.py  learning.py  message.py  outline.py  prep.py  test_agent.py
src/deepresearch/api/: __init__.py  auth.py  main.py  models.py  task_manager.py
src/deepresearch/cli/: __init__.py  __main__.py  config.py  exceptions.py  history.py  ui.py  utils.py
src/deepresearch/config/: __init__.py  base.py  llms_config.py  search_config.py  workflow_config.py
src/deepresearch/data/: category.py
src/deepresearch/llms/: llm.py
src/deepresearch/mcp/: __init__.py  agent_registry.py  collaboration_orchestrator.py  exceptions.py  message_bus.py  result_aggregator.py  types.py
src/deepresearch/mcp_client/: __init__.py  arxiv.py  paper_mcp_server.py  pubmed.py  test_mcp.py
src/deepresearch/prompts/: __init__.py  template.py
src/deepresearch/prompts/generate/: chart.py  generate.py
src/deepresearch/prompts/learning/: draft.py  evaluate_completeness.py  evaluate_freshness.py  evaluate_plurality.py  extract_knowledge.py  judge.py  research_query.py  search_query.py
src/deepresearch/prompts/outline/: outline.py  outline_sq.py
src/deepresearch/prompts/prep/: clarify.py  classify.py  rewrite.py
src/deepresearch/tools/: _jina.py  _jina_mcp.py  _search.py  _tavily.py  md2html.py  search.py
src/deepresearch/utils/: parse_model_res.py  print_util.py
src/llms/: llm.py
src/mcp_client/: arxiv.py
src/tools/: _jina.py  _tavily.py  md2html.py
tests/: performance_analysis.py  test_tasks.py
tests/e2e/: test_e2e.py
tests/integration/: test_cli_integration.py  test_integration.py
tests/performance/: concurrency_test.py  stability_test.py
tests/reports/v1.1.1/: analyze_performance.py  full_process_test.py  full_process_test_report.md  performance_comparison_report.md  performance_test.py
tests/unit/agent/: test_agent.py
tests/unit/api/: __init__.py  test_auth.py  test_models.py  test_task_manager.py
tests/unit/cli/: __init__.py  test_config.py  test_exceptions.py  test_history.py  test_main.py  test_ui.py
tests/unit/config/: __init__.py  test_base.py
tests/unit/llms/: test_llm.py
tests/unit/mcp/: test_agent_registry.py  test_collaboration_orchestrator.py  test_message_bus.py
tests/unit/mcp_client/: test_mcp.py
tests/unit/prompts/: test_template.py
tests/utils/: testing_guidelines.md
(+33 files in other folders)
