[project]
name = "DeepResearch"
dynamic = ["version"]
description = "Typist is a deep research framework based on the collaborative work of multiple LLMs. It integrates search tools to conduct deep research on topics and ultimately outputs visualized research reports."
authors = [
    {name = "CzChu", email = "czchu2@iflytek.com"},
    {name = "xinetzone", email = "735613050@qq.com"},
]
requires-python = ">=3.14,<4.0"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "colorama==0.4.6",
    "exceptiongroup==1.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "mcp==1.17.0",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pydantic-settings==2.11.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pywin32",
    "referencing==0.36.2",
    "regex==2025.9.18",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "sniffio==1.3.1",
    "sse-starlette==3.0.2",
    "starlette==0.48.0",
    "tavily-python==0.7.12",
    "tiktoken==0.12.0",
    "toml==0.10.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "uvicorn==0.37.0",
    "langchain>=1.2",
    "langchain-deepseek>=1",
    "langgraph",
    "json-repair>=0.58",
    "beautifulsoup4>=4.12",
    "aiohttp>=3.10",
    "lxml>=6",
    "pytest>=8.3",
    "mistune>=3.1.4",
]

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-markdown-tables",
    "sphinxcontrib-mermaid",
    "xyzstyle",
    "myst-nb",
    "markdown-it-py",
    "linkify-it-py",
    "sphinx-design",
]

dev = [
    "invoke",
    "ruff",
    "mypy",
    "taolib",
]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-include = ["*.py"]
extend-exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "src/deepresearch/tools/md2html.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501", "E101", "W291", "W293", "W605", "F401", "F403", "F405", "F841"]

[tool.ruff.format]
quote-style = "double"

[project.scripts]
deepresearch = "deepresearch.cli.utils:main"

[build-system]
requires = ["scikit-build-core>=0.10", "setuptools_scm>=8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.install-dir = "src"
minimum-version = "0.10"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "src/deepresearch/_version.py"
