[project]
name = "DeepResearch"
dynamic = ["version"]
description = "Typist is a deep research framework based on the collaborative work of multiple LLMs. It integrates search tools to conduct deep research on topics and ultimately outputs visualized research reports."
authors = [
    {name = "CzChu", email = "czchu2@iflytek.com"},
    {name = "xinetzone", email = "735613050@qq.com"},
]
requires-python = ">=3.14,<4.0"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "mcp>=1.17",
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
    "tavily-python>=0.7",
    "langchain>=1.2",
    "langchain-deepseek>=1",
    "langgraph>=0.2",
    "json-repair>=0.58",
    "beautifulsoup4>=4.12",
    "lxml>=6",
    "mistune>=3.1.4",
]

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-markdown-tables",
    "sphinxcontrib-mermaid",
    "xyzstyle",
    "myst-nb",
    "markdown-it-py",
    "linkify-it-py",
    "sphinx-design",
]

dev = [
    "invoke",
    "ruff",
    "mypy",
    "taolib",
    "tiktoken", # token 计数
]

test = [
    "pytest>=8.3",
    "pytest-cov",
    "coverage",
]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-include = ["*.py"]
extend-exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "src/deepresearch/tools/md2html.py",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501", "E101", "W291", "W293", "W605", "F401", "F403", "F405", "F841"]

[tool.ruff.format]
quote-style = "double"

[project.scripts]
deepresearch = "deepresearch.cli.utils:main"

[build-system]
requires = ["scikit-build-core>=0.10", "setuptools_scm>=8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.install-dir = "src"
minimum-version = "0.10"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "src/deepresearch/_version.py"
